--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -7,17 +7,17 @@
 	<parent>
 		<groupId>io.mosip.admin</groupId>
 		<artifactId>admin-parent</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0-beta.2</version>
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0-beta.2</version>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springdoc.version>1.8.0</springdoc.version>
-		<mosip.commons.packetmanager.version>1.3.0-SNAPSHOT</mosip.commons.packetmanager.version>
+		<mosip.commons.packetmanager.version>1.3.0-beta.2</mosip.commons.packetmanager.version>
 		<kernel.core.version>1.3.0-beta.2</kernel.core.version>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
