--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -7,7 +7,7 @@
 	<name>kernel-syncdata-service</name>
 	<description>Mosip commons project </description>
         <url>https://github.com/mosip/commons</url>
-	<version>1.3.0-beta.2</version>
+	<version>1.3.0-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -82,7 +82,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 		<kernel.core.version>1.3.0-SNAPSHOT</kernel.core.version>
-		<kernel.auth.adaptor.version>1.3.0-beta.1</kernel.auth.adaptor.version>
+		<kernel.auth.adaptor.version>1.3.0-SNAPSHOT</kernel.auth.adaptor.version>
 		<kernel.logger.version>1.3.0-SNAPSHOT</kernel.logger.version>
 		<kernel.crypto.version>1.3.0-SNAPSHOT</kernel.crypto.version>
 		<kernel.keymanager.version>1.3.0-SNAPSHOT</kernel.keymanager.version>
