--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -29,6 +29,7 @@
 		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
 		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
+                <spring.boot.maven.plugin.version>3.2.3</spring.boot.maven.plugin.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -256,6 +257,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                                <version>${spring.boot.maven.plugin.version}</version>
 				<configuration>
 					<executable>true</executable>
 					<layout>ZIP</layout>
@@ -342,7 +344,7 @@
 		<plugin>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-maven-plugin</artifactId>
-			<version>3.2.3</version>
+                        <version>${spring.boot.maven.plugin.version}</version>
 			<configuration>
 				<executable>true</executable>
 				<layout>ZIP</layout>
