--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>io.mosip.admin</groupId>
 		<artifactId>admin-parent</artifactId>
-		<version>1.2.1.4-SNAPSHOT</version>
+		<version>1.2.1.4</version>
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
